src/objects/Lcm_TestTaskAssignCase__c.object
<CustomObject>
    <description>Zuordnung von Testaufgaben zu Tickets</description>
    <fields>
        <fullName>Lcm_CaseDue_c__c</fullName>
        <formula>Lcm_Case__r.Datum_F_lligkeit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket-Fälligkeit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lcm_CaseName__c</fullName>
        <description>Ticketname</description>
        <formula>Lcm_Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ticketname</inlineHelpText>
        <label>Ticket-Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_CaseState__c</fullName>
        <formula>Text(Lcm_Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket-Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>zugeordnetes Ticket</description>
        <inlineHelpText>zugeordnetes Ticket</inlineHelpText>
        <label>Ticket-Nr</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Testaufgabe/TI-Zuordnungen</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_TestCaseName__c</fullName>
        <formula>Lcm_TestTask__r.Lcm_TestCaseName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Testfall-Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_TestCase__c</fullName>
        <formula>Lcm_TestTask__r.Lcm_TestCase__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Testfall-Nr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_TestTaskErrorState__c</fullName>
        <formula>Text(Lcm_TestTask__r.Lcm_ErrorState__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fehler-Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_TestTaskState__c</fullName>
        <formula>Lcm_TestTask__r.Lcm_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Testaufgabe-Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_TestTask__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>zugeordnete Testaufgabe</description>
        <inlineHelpText>zugeordnete Testaufgabe</inlineHelpText>
        <label>Testaufgabe-Nr</label>
        <referenceTo>Lcm_TestTask__c</referenceTo>
        <relationshipName>Lcm_TestTask</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_LcmPhase__c</fullName>
        <formula>TExt(Lcm_Case__r.Funktionsphase__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase</label>
        <type>Text</type>
    </fields>
    <label>Testaufgabe/TI-Zuordnung</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Lcm_TestTask__c</columns>
        <columns>Lcm_TestTaskState__c</columns>
        <columns>Lcm_TestCase__c</columns>
        <columns>Lcm_TestCaseName__c</columns>
        <columns>Lcm_Case__c</columns>
        <columns>Lcm_CaseName__c</columns>
        <columns>Lcm_CaseState__c</columns>
        <columns>Lcm_CaseDue_c__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>TestTaskForRetestCase</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Lcm_TestTask__c</columns>
        <columns>Lcm_TestTaskState__c</columns>
        <columns>Lcm_TestTaskErrorState__c</columns>
        <columns>Lcm_Case__c</columns>
        <columns>Lcm_CaseName__c</columns>
        <columns>Lcm_CaseState__c</columns>
        <columns>Lcm_CaseDue_c__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_CaseState__c</field>
            <operation>equals</operation>
            <value>geschlossen</value>
        </filters>
        <filters>
            <field>Lcm_TestTaskErrorState__c</field>
            <operation>equals</operation>
            <value>in Behebung</value>
        </filters>
        <label>Für Retest anstehende TIs</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Zuordnungs-Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testaufgabe/TI-Zuordnungen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>